# factorio-achievements-fixer

./: CHANGELOG.md  DESIGN.md  LICENSE  README.md  factorio-achievements-fixer.sln  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml
factorio-achievements-fixer/: App.xaml  App.xaml.cs  AssemblyInfo.cs  InitialWindow.xaml  InitialWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  factorio-achievements-fixer.csproj
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: dirs.rs  format.rs  lib.rs  main.rs  pack.rs  patch.rs
src-tauri/tests/: test_saves.rs
src/components/: Bytes.tsx  DragAndDrop.tsx  Logs.tsx  Monoblock.tsx
src/views/: Patcher.tsx  SaveSelector.tsx
