[package]
name = "factorio-achievements-fixer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "factorio_achievements_fixer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
simple-home-dir = "0.4.4"
human_bytes = "0.4.3"
time = "0.3.36"
humanize-duration = "0.0.6"
flate2 = "1.0.35"
zip = "2.2.1"
rand = "0.8.5"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }

